0.10
 - API change: Add 'data' and 'data_type' parameters to Form.
 - API change: Add 'data' and 'data_type' parameters to Select.
 - API change: Remove 'options' parameter from Select.
 - Add DESCRIPTION section to Element doc.
 - Add Utils with data and data_type checks.
 - Add check for CSS class in Input, Option and Select.
 - Add check for data in Option.
 - Add default value for boolean values in Input.
 - Add doc for Input.
 - Add possibility of callback to 'data'.
 - Add tests for Button.
 - Add tests for Input.
 - Add tests for Options.
 - Add tests for Select.
 - Add tests for Select constructor errors.
 - Add tests for Utils.
 - Fix boolean value in Option for disabled and selected params.
 - Fix ERRORS sections in doc.

0.09 2024-01-06T19:35:12+01:00
 - Add check for CSS class.
 - Update to bigger version because issues in $VERSION.

0.01 2024-01-06T18:02:59+01:00
 - First version.